tests/ui/rfc-2126-crate-paths/crate-path-non-absolute.rs
struct S;

pub mod m {
    fn f() {
        let s = ::m::crate::S; //~ ERROR failed to resolve
        let s1 = ::crate::S; //~ ERROR failed to resolve
        let s2 = crate::S; // no error
    }
}

fn main() {}
